// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render comments label, when comments are loaded 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 60px;
}

.c1 {
  font-family: TimesModern-Bold;
  font-size: 32px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  padding: 24px;
}

.c2 {
  font-family: TimesDigitalW04;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  max-width: 660px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #008387;
  color: white;
  font-family: Roboto-Regular;
  width: 127px;
  height: 48px;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin: 24px;
}

@media (min-width:768px) {
  .c0 {
    padding: 88px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Join the conversation
    </div>
    <div
      class="c2"
    >
      Commenting is only available to unlimited access subscribers. Upgrade your subscription to have your say.
    </div>
    <a
      class="c3"
      href="#"
    >
      View offers
    </a>
  </div>
</DocumentFragment>
`;

exports[`disabled comments 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 60px;
}

.c1 {
  font-family: TimesModern-Bold;
  font-size: 32px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  padding: 24px;
}

.c2 {
  font-family: TimesDigitalW04;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  max-width: 660px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #008387;
  color: white;
  font-family: Roboto-Regular;
  width: 127px;
  height: 48px;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin: 24px;
}

@media (min-width:768px) {
  .c0 {
    padding: 88px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Join the conversation
    </div>
    <div
      class="c2"
    >
      Commenting is only available to unlimited access subscribers. Upgrade your subscription to have your say.
    </div>
    <a
      class="c3"
      href="https://www.mockUrl.co.uk"
    >
      View offers
    </a>
  </div>
</DocumentFragment>
`;

exports[`single comment 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 60px;
}

.c1 {
  font-family: TimesModern-Bold;
  font-size: 32px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  padding: 24px;
}

.c2 {
  font-family: TimesDigitalW04;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  max-width: 660px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #008387;
  color: white;
  font-family: Roboto-Regular;
  width: 127px;
  height: 48px;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin: 24px;
}

@media (min-width:768px) {
  .c0 {
    padding: 88px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Join the conversation
    </div>
    <div
      class="c2"
    >
      Commenting is only available to unlimited access subscribers. Upgrade your subscription to have your say.
    </div>
    <a
      class="c3"
      href="https://www.mockUrl.co.uk"
    >
      View offers
    </a>
  </div>
</DocumentFragment>
`;

exports[`window listeners added all listeners added 1`] = `Array []`;

exports[`zero comments 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 60px;
}

.c1 {
  font-family: TimesModern-Bold;
  font-size: 32px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  padding: 24px;
}

.c2 {
  font-family: TimesDigitalW04;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  max-width: 660px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: #008387;
  color: white;
  font-family: Roboto-Regular;
  width: 127px;
  height: 48px;
  font-size: 15px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin: 24px;
}

@media (min-width:768px) {
  .c0 {
    padding: 88px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Join the conversation
    </div>
    <div
      class="c2"
    >
      Commenting is only available to unlimited access subscribers. Upgrade your subscription to have your say.
    </div>
    <a
      class="c3"
      href="https://www.mockUrl.co.uk"
    >
      View offers
    </a>
  </div>
</DocumentFragment>
`;
